CHATS_SIT/force-app/main/default/objects/batchsit_t_report__x.object
<CustomObject>
    <description>batchsit$t_report</description>
    <externalDataSource>Heroku_Connect_datasource</externalDataSource>
    <externalName>batchsit$t_report</externalName>
    <fields>
        <fullName>createddate__c</fullName>
        <description>createddate</description>
        <externalDeveloperName>createddate</externalDeveloperName>
        <label>Creation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>idn_report__c</fullName>
        <description>idn_report</description>
        <externalDeveloperName>idn_report</externalDeveloperName>
        <label>Report ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nam_report__c</fullName>
        <description>nam_report</description>
        <externalDeveloperName>nam_report</externalDeveloperName>
        <label>Report Name</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_rpt__c</fullName>
        <description>txt_rpt</description>
        <externalDeveloperName>txt_rpt</externalDeveloperName>
        <label>Report Text</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Report</label>
    <pluralLabel>Report</pluralLabel>
</CustomObject>